[project]
name = "risk-management"
version = "0.1.0"
description = ""
authors = [{ name = "Ernest Dong", email = "dongcy2000@gmail.com" }]
dependencies = [
    "pandas>=1.5.1",
    "statsmodels>=0.13.5",
    "seaborn>=0.12.1",
    "openpyxl>=3.0.10",
]
requires-python = ">=3.10"
license = { text = "MIT" }
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = ["ipykernel>=6.17.1"]
