
[project]
name = "RiskManagementModel"
version = "3"
description = ""
authors = [{ name = "Ernest Dong", email = "dongcy2000@gmail.com" }]
dependencies = [
    "pandas>=2.0.1",
    "openpyxl>=3.1.2",
    "numpy>=1.24.3",
    "scipy>=1.9.3",
    "arch>=6.0.1",
]
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
dev = [
    "ipykernel>=6.23.1",
    "nbconvert>=7.4.0",
]
