
[project]
name = "project4"
version = "0.1.0"
description = ""
authors = [
    {name = "Ernest Dong", email = "dongcy2000@gmail.com"},
]
dependencies = [
    "matplotlib>=3.7.1",
    "numpy>=1.24.3",
    "pandas>=2.0.2",
    "arch>=6.1.0",
    "scipy>=1.9.3",
    "statsmodels>=0.14.0",
    "openpyxl>=3.1.2",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "ipykernel>=6.23.1",
]
